2013-06-07  Albert Chu  <chu11@llnl.gov>

	* tagged cerebro-1-18-1

	* META, NEWS: update for release

2013-06-07  Albert Chu  <chu11@llnl.gov>

	* src/libs/util/network_util.c (low_timeout_connect): Fix segfault
	corner case.
	
2013-02-08  Albert Chu  <chu11@llnl.gov>

	* tagged cerebro-1-17-1
	
2013-02-07  Albert Chu  <chu11@llnl.gov>

	* Support new cerebrod_monitor_module_exclude and
	cerebrod_event_module_exclude options to limit loading of specific
	modules.
	
	* META, NEWS: update for release

2013-01-31  Albert Chu  <chu11@llnl.gov>

	* /etc/cerebro.conf: Add cerebrod_gettimeofday_workaround.  Remove
	cerebrod_alternate_hostname, latter which is only for debugging.
	
2013-01-30  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_speaker.c: Re-work gettimeofday workaround
	into configuration option.

	* src/libs/util/config_util.c,
	src/libs/include/cerebro/cerebro_config.h,
	src/cerebrod/cerebrod_config.c: Support new
	cerebrod_gettimeofday_workaround configuration option.

	* src/libs/wrappers/wrappers.h,
	src/libs/wrappers/wrappers.c (Gettimeofday_workaround,
	wrap_gettimeofday_workaround): Add new macro and function.

	* man/cerebro.conf.5.in: Add cerebrod_gettimeofday_workaround
	information.

	* config/ac_gettimeofday_workaround.m4: Remove file.

	* configure.ac, cerebro.spec.in: Update accordingly.

	* Re autogen.

2013-01-10  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod_speaker.c (cerebrod_speaker): Re-work prior
	gettimeofday workaround to deal with corner cases.
	
2012-12-11  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod_speaker.c (cerebrod_speaker): Add additional
	workaround for gettimeofday problem.

	* Rename --with-gettimeofday-retry to --with-gettimeofday-workaround.

2012-11-12  Albert Chu  <chu11@llnl.gov>
	
	* src/libs/wrappers/wrappers.c (wrap_gettimeofday): Update log
	message with more detail.

2012-11-09  Albert Chu  <chu11@llnl.gov>

	Support gettimeofday retry configuration option to work around